# anithon-stats

./: .editorconfig  .env  .envrc  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  buf.gen.client.yaml  buf.gen.server.yaml  build-cli-with-ui.sh  config.toml  go.mod  go.sum  nx.json  package.json  renovate.json  tsconfig.base.json  tsconfig.compile.json  tsconfig.json  workspace.json
.cargo/: config.toml  init.sh
.fleet/: settings.json
.yarn/: build-state.yml
anilist/: Cargo.toml  build.rs
anistats_app/: pubspec.yaml
anistats_app/data_access/: README.md  pubspec.yaml
anistats_app/interface/: README.md  pubspec.yaml
anistats_app/lib/: app_module.dart  main.dart
anistats_app/linux/: CMakeLists.txt
anistats_app/shared/: README.md  pubspec.yaml
anistats_cli/: Cargo.toml  README.md  build.rs
anistats_cli/src/: cli.rs  command.rs  lib.rs  main.rs
anistats_cli/src/commands/: migrate.rs  mod.rs  serve.rs  ui.rs
anistats_common/: Cargo.toml  README.md
anistats_common/src/config/: database.rs  mod.rs  server.rs
anistats_core/: Cargo.toml  README.md
anistats_core/migrations/2024-03-22-170927_initial/: down.sql  up.sql
anistats_core/src/: lib.rs  models.rs  schema.rs
anistats_core/src/data_access/: connection.rs  migrations.rs  mod.rs
anistats_core/src/data_access/entity/: media.rs  mod.rs  translation.rs
anistats_core/src/data_access/repository/: media_repository.rs  mod.rs
anistats_core/src/grpc/: grpc_media_service.rs  mod.rs
anistats_core_ffi/: Cargo.toml  README.md
anistats_core_ffi/src/: lib.rs
anistats_proto/: Cargo.toml
anistats_proto/src/: anistats.list.rs  anistats.list.tonic.rs  anistats.media.rs  anistats.media.tonic.rs  lib.rs  uuid.rs
anistats_server/: Cargo.toml  README.md
api/protobuf/: list.proto  ping.proto  user.proto
apps/backend/: .barrelsby.json  .editorconfig  .env.default  .eslintrc.json  .lib.swcrc  Dockerfile  docker-compose.yml  graphql-codegen.config.ts  package.json  project.json  tsconfig.app.json  tsconfig.json
apps/frontend/: components.d.ts  index.html  package.json  project.json  proxy.conf.json  tsconfig.json  vite.config.ts
backend-src.old/services/: AnilistUserManager.ts  ChunkService.ts  EntryService.ts
backend-src.old/util/: CanvasUtil.ts
cmd/anistats/: Makefile  main.go
dart/anistats_api/: pubspec.yaml
dart/anistats_app/: README.md  l10n.yaml  pubspec.yaml
dart/old/: main.dart  main_prod.dart  run.dart
db/base/: test_repository.go
db/entity/: test.go
db/factory/: test_repository.go
frontend/: components.d.ts  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  shims-vue.d.ts
internal/cmd/: migrate.go  root.go  serve.go
internal/config/: config.go  database_config.go  server_config.go
internal/dbal/: dbal.go
internal/grpc/: serve.go  server.go
internal/services/: test.go
internal/version/: version.go
libs-anilist.old/anilist/: README.md  project.json
libs/anilist/: .gitignore  .graphqlconfig  jest.config.ts  package.json  project.json  schema.graphql
libs/shared/: .barrelsby.json  .lib.swcrc  jest.config.ts  package.json  project.json
pkg/anilist/: client.go
proto/: list.proto  media.proto  test.proto  test_service.proto  uuid.proto
proto_uuid/: Cargo.toml
proto_uuid/src/: lib.rs
src/: Server.ts  index.ts
src/config/: index.ts
src/controllers/: ListController.ts
src/datasources/: SqliteDataSource.ts
src/dto/: ChunkList.ts
src/entity/: AnilistUser.ts  SavedData.ts  SavedDataRepository.ts  Session.ts  UserList.ts  UserListRepository.ts
src/guards/: AuthMiddleware.ts
src/services/: AnilistUserManager.ts  AuthContextProvider.ts  ChunkService.ts  EntryService.ts  ListManager.ts  index.ts
src/static/: style.css
src/util/: CanvasUtil.ts  ListImage.ts
src/views/: _base.pug  index.pug  (+1 more)
tools/: Makefile  sqlc.yaml
(+895 files in other folders)
