[workspace]
resolver = "2"
members = [
    "anilist",
    "anistats_cli",
    "anistats_core",
    "proto",
    "proto_uuid",
]

[workspace.dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tonic = { version = "0.11.0", features = ["gzip"] }
tonic-reflection = "0.11.0"
tracing = { version = "0.1.40", features = ["async-await"] }
uuid = { version = "1.8.0", features = ["fast-rng", "v7", "serde"] }
tracing-subscriber = "0.3.18"
clap-serde-derive = "0.2.1"
clap = { version = "4.5.3", features = ["derive", "env"] }
