[package]
name = "anistats_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
anistats_core = { path = "../anistats_core" }
anistats_common = { path = "../anistats_common" }
tokio = { workspace = true }
dotenvy = "0.15.7"
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
clap-serde-derive = { workspace = true }
clap = { workspace = true }
