[package]
name = "anistats_cli"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[features]
ui = []

[dependencies]
anyhow = { workspace = true }
anistats_core = { path = "../anistats_core" }
anistats_common = { path = "../anistats_common" }
anistats_server = { path = "../anistats_server" }
tokio = { workspace = true }
dotenvy = "0.15.7"
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
clap-serde-derive = { workspace = true }
clap = { workspace = true }
libc = "0.2.153"
