[package]
name = "anistats_common"
version = "0.1.0"
edition = "2021"
authors = [ "Joey Vos <contact@jojoxd.nl> (https://jojoxd.nl)" ]

[lib]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
toml = "0.8.12"
tracing = { workspace = true }
clap-serde-derive = { workspace = true }
clap = { workspace = true }
